moved a section to discussion on playful alien chat

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -1374,7 +1374,9 @@ While this aspect of the drama process was introduced by the facilitator, in ali
 
 _Playful dialogue with the aliens unrelated to game making_
 
-The process of asking the aliens for technical help within a code project sparked a playful process of informal chatting with the aliens. During in our end of session reflection above, I noted the following ad-hoc encounter that a child initiated on the interactive page while his father was taking a break from coding.
+The process of asking the aliens for technical help within a code project sparked a playful process of informal chatting with the aliens.
+
+<!-- During in our end of session reflection above, I noted the following ad-hoc encounter that a child initiated on the interactive page while his father was taking a break from coding.
 
     Ed: hi WEEAN what is it like up there :)
     Weean: It is cold and very big but quite tranquil too.  all the same.
@@ -1386,13 +1388,13 @@ The process of asking the aliens for technical help within a code project sparke
 
 ![](./Pictures/2019-05-15-alien_feedback_2.png){width=90%}
 
-![alien feedback]({{ site.baseurl }}/thesis_chapters/Pictures/2019-05-15-alien_feedback_2.png)
+![alien feedback]({{ site.baseurl }}/thesis_chapters/Pictures/2019-05-15-alien_feedback_2.png) -->
 
 Inspired by the positive reaction of participants to this playful engagement with the fictional audience, I asked a student helper to participate remotely to play the part of the alien. The student then gave feedback via live text interaction to participants in the final session. The process started with supportive and celebratory messages posted from the alien. The impact was significant with the young people with 5 out of 7 engaging by writing messages and all mentioning the interactions verbally during the session.
 
 The live chat began to fulfill a function of building  insider rapport, creating a fun atmosphere, celebrating the completion of games in the absence of a public showcase, and signposting the achievements of other participants. For some pairs, while the child interacted in the live chat, parents performed final tweaks to code projects and challenges. Two parents in particular worked hard debugging more complex elements of the game with facilitators and peers. Other parents engaged with the chat and encouraged their children to get feedback from the aliens about their game in particular.
 
-The start of process began when Ed in a moment of free time expanded the use of space initially imagined to address technical needs by initiation a playful interaction which, while in the motivation to support different learner identities, was a novel, volitional action in this context. It is helpful to expore this interaction using AT and TADS terminology. Ed is in conflict, not able or wanting to engage in his existing creative activities while his father has a social break. Using the secondary stimulus of a text chat with fictional aliens, he writes a playful personal question to the aliens as an expression of volitional action to play, casts out an experimental kedging anchor. By co-incidence, I was on a different computer, saw this question, and was able to respond in real time. Thus, by getting a response, Ed's kedging anchor caught onto an anchor point and Ed was able to resolve this conflict of inactivity and in doing so both amuse himself and other other with humorous self-expression, and open-up a novel, child-centred activity for the whole group which could also address potential issues of alienation from the culture of _serious coding_ expressed by other participants.  
+
 
 <!--
 DEVELOP OR FINISH - note on Affordances
