drama and vierson

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -1201,11 +1201,18 @@ AND - link more
 
 <!-- After the  excerpt which introduces a dramatic scenario involving a fictional audience I orientate learners in suggested use of support documentation. A full transcript is available in the appendix which outlines that process. -->
 
-This section references the following appendices.
+The drama process involved a fictional frame of aliens coming to judge the earth. An extract of how I introduce the drama frame, the main and side missions is included as appendix 4.x. Below is a short extract of the overall mission.
 
-- appendix 4.x : Vignette of introduction of the drama process and how end goal and side missions are introduced.
-- appendix 4.x - vignette 2 of the reflection in role.  
--
+    We have some guidelines:
+
+      • Make a game about a big or small problem for your planet to solve. If you can let us play it each week as you go along.
+      • Give us an update each week by recording a group update.
+      • Show you can work on your own but also work as part of a team.
+      • We will also send you text messages with some mini-missions sometimes. Be sure to tell us how you do.
+
+    Please now get started and come up with a new game about solving a problem on Earth.
+
+_Extract from Appendix 4.x: Vignette of introduction of the drama process_
 
 The process of introducing a scenario for participant to respond to is common in project based learning in this vignette. Here it is extended using a dramatic element in line with Heathcote on Mantle of the Expert (MoE) and other process drama techniques (explored in Lit Review). The following section outlines key characteristics MoE [@aitken_dorothy_2013] in context.
 
@@ -1266,10 +1273,6 @@ One key activity that was carried out in role in P3 was end of session reflectio
 Vignette 4.1.b is a transcript which illustrates this  process. In the extract participants are invited to take turns showing their game, recapping their progress and outlining next steps to the alien observers. I play the role as a liaison facilitating the process for the fictional, remote audience. I also draw attention to the secret missions that had been distributed to participants, which along with social missions are explored in the following section .
 
 
-
-
-
-
 #### Use of side missions to encourage varied creative practices
 
 <!--
@@ -1308,8 +1311,6 @@ These sanctioned non-design activities, designed to reduce participant stress, t
 <!-- PROVISIONAL BRING accurate FIGURES TO THIS. -->
 
 The process was not without friction. After initially engaging with the process of secret games, Toby and Dave, who were later working on a tricky coding process, expressed frustration at interference. Thus, while promising, limits to this process should be evaluated to avoid overly disruptive behaviour which create barriers to progress. For example, time limits could be in place.  
-
-
 
 Side missions or side quests are also used in open world games are used in part to appeal to different kinds of players and are often models on Bartle's taxonomy of game player types [@bartle_hearts_nodate]. In this phase, parents Molly and Mark both used the prompts of the social missions to take a break from their creative work using the software toolset to talk to other parents and children. This supported and encouraged behaviours that I had observed in the previous stage where they had been energised by breaks for coding and interactions with others. This activity helps addresses one of the key barriers to taking part in a coding community that of alienation from the culture of _hardcore coding_.
 
@@ -1362,7 +1363,9 @@ The positive reaction of young people to the drama process was also picked up in
 
 _Exploring documentation and accessing technical help within the drama frame_
 
-In the first phase of the project, I had promoted the use of a mailing list to ask technical and code questions of the wider group. This surfaced a conflict where parents were reluctant to bother other participants with such issues. To address this, as part of the drama process, I encouraged participants to communicate with the aliens to ask help. To do this in a way that encouraged other participants to join in, I created a project in the shared coding project area with a webpage that could be edited and viewed by participants. When in the vignette 4.1.b Mark asks "We’d like to ask the Weean some more questions (to overcome coding blockages), is that the best way to do it?", he is referring to this project webpage. The process of writing down a text request encourages the adoption of professional practice of asking a written question to overcome a coding problem and thus builds experience of using technical terms. Undertaking it in-role potentially addresses the barrier of asking for help by de-personalising the process.
+In P1 I created a mailing list for participants to ask technical and code questions of the wider group. My aim was to create a peer community helping each other rather than a helping relationship only between myself and individuals. However, this email list was hardly used for this purpose. Two parents shared that they were reluctant to bother other participants with their own issues.
+
+To address this, as part of the drama process, I encouraged participants to write to the aliens to ask help. To do this in a way that encouraged other participants to join in, I created a project in the shared coding project area with a webpage that could be edited and viewed by participants. When in the vignette 4.1.b Mark asks "We’d like to ask the Weean some more questions (to overcome coding blockages), is that the best way to do it?", he is referring to this project webpage. The process of writing down a text request encourages the adoption of professional practice of asking a written question to overcome a coding problem and thus builds experience of using technical terms. Undertaking it in-role potentially addresses the barrier of asking for help by de-personalising the process.
 
 Dan and Toby also received written help from the aliens to implement a pattern of creating random movement in their pac-man clone game. For this pair, the process of following a code suggestion from the aliens gives the parent opportunity to deconstruct the code in detail to explore coding concepts. In later discussion, Dan uses the fiction of the alien when asking a clarifying question.
 
@@ -1392,7 +1395,7 @@ The process of asking the aliens for technical help within a code project sparke
 
 Inspired by the positive reaction of participants to this playful engagement with the fictional audience, I asked a student helper to participate remotely to play the part of the alien. The student then gave feedback via live text interaction to participants in the final session. The process started with supportive and celebratory messages posted from the alien. The impact was significant with the young people with 5 out of 7 engaging by writing messages and all mentioning the interactions verbally during the session.
 
-The live chat began to fulfill a function of building  insider rapport, creating a fun atmosphere, celebrating the completion of games in the absence of a public showcase, and signposting the achievements of other participants. For some pairs, while the child interacted in the live chat, parents performed final tweaks to code projects and challenges. Two parents in particular worked hard debugging more complex elements of the game with facilitators and peers. Other parents engaged with the chat and encouraged their children to get feedback from the aliens about their game in particular.
+The live chat began to fulfil a function of building  insider rapport, creating a fun atmosphere, celebrating the completion of games in the absence of a public showcase, and signposting the achievements of other participants. For some pairs, while the child interacted in the live chat, parents performed final tweaks to code projects and challenges. Two parents in particular worked hard debugging more complex elements of the game with facilitators and peers. Other parents engaged with the chat and encouraged their children to get feedback from the aliens about their game in particular.
 
 
 
