--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -72,9 +72,9 @@ title: 4. Exploration of the Formative Learning Design Process
         -   [On a drama processes](#on-a-drama-processes)
             -   [A game encouraging maker / player
                 types](#a-game-encouraging-maker-player-types)
-            -   [Description drama process using extracts from
-                vignettes - LINK TO VIGNETTE
-                ONE](#description-drama-process-using-extracts-from-vignettes---link-to-vignette-one)
+            -   [Description drama process using extracts from vignettes
+                and concepts of
+                MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
             -   [Relevant observations on side missions and drama from
@@ -1193,7 +1193,7 @@ The success of activity spurred the creation of the creation of side-missions to
 
 AND - link more
 
-#### Description drama process using extracts from vignettes - LINK TO VIGNETTE ONE
+#### Description drama process using extracts from vignettes and concepts of MoE
 
 <!-- q: How much to reference back to previous chapter? -->
 
@@ -1222,7 +1222,7 @@ While inspired by the work on Heathcote on Mantle of the Expert, not all element
 
 <!-- Aitken's and Heathcote's terms follow in italics. Within a _fictional context_ a _responsible team_ is contracted into a _commission_ by a _client_. The facilitator _frames curriculum elements_ as productive tasks and plans for _tensions_ to arise involving: _authentic contexts_, _messiness of learning_, maintaining learner interest and _resilience_ to overcome the _grappling and struggling_ involved. The following sections explore some of these key concepts via the example in vignette. -->
 
-_Contracting into drama_
+**_Contracting into drama_**
 
 As a facilitator, I indicate that we are entering a dramatic process and attempt to draw everyone into a commitment to the process. The collusion is noted by both parents and children in recorded exchanges. For example, after engaging with a code example provided by myself in the role of the aliens, one pair make the following comment.
 
@@ -1270,7 +1270,7 @@ One key activity that was carried out in role in P3 was end of session reflectio
 
 <!-- IS MORE DESCRIPTION NEEDED HERE. ? -->
 
-Vignette 4.1.b is a transcript which illustrates this  process. In the extract participants are invited to take turns showing their game, recapping their progress and outlining next steps to the alien observers. I play the role as a liaison facilitating the process for the fictional, remote audience. I also draw attention to the secret missions that had been distributed to participants, which along with social missions are explored in the following section .
+Vignette 4.1.b is a transcript which illustrates this  process. In the extract participants are invited to take turns showing their game, recapping their progress and outlining next steps to the alien observers. I play the role as a liaison facilitating the process for the fictional, remote audience. I also draw attention to the secret missions that had been distributed to participants, which along with social missions are explored in the following section.
 
 
 #### Use of side missions to encourage varied creative practices
@@ -1327,7 +1327,7 @@ The use of missions introduced by facilitator are taken up voluntarily by partic
 A BIT MORE ON AGENCY?
 
 
-#### Relevant observations on side missions and drama from the data
+_**Relevant observations on side missions and drama from the data**_
 
 The positive reaction of young people to the drama process was also picked up in interview data.
 
@@ -1360,6 +1360,8 @@ The positive reaction of young people to the drama process was also picked up in
 
 
 #### Observations on written interactions with the alien in the drama
+
+
 
 _Exploring documentation and accessing technical help within the drama frame_
 
@@ -1415,8 +1417,11 @@ This section has explored the use of the possibilities of a drama process to sup
 
 <!-- The next section examines the affordances and impact of the coding environment and starting game template, which in a similar way, evolved in response to participant use of earlier iterations of the toolset. Conversely, examples of more unguided practices and use of tools which served to increase the scope of agency are explored in the final section of this chapter. -->
 
-<!-- This tallies with observations from journal, interviews and video data of participants. -->
-<!-- The impact of time pressure to finish games also compounded tensions involving shifting away from game making to reflective activities. Even with the use of reflection in role, reflection activity was not prioritised in final sessions as time drew short. -->
+The impact of time pressure to finish games also compounded tensions involving shifting away from game making to reflective activities. Even with the use of reflection in role, reflection activity was not prioritised in final sessions as time drew short.
+
+This aligns with existing research addressing the barriers to effective reflection and meta-cognition on PBL processes.
+NOTE - EXPLORE THIS IN LR AND DISCUSSION IF KEEPING THIS.
+
 
 <!-- OTHER FACTORS
   - result of analysis of interactions during game making,
