--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -62,9 +62,9 @@
         -   [On a drama processes](#on-a-drama-processes)
             -   [A game encouraging maker / player
                 types](#a-game-encouraging-maker-player-types)
-            -   [Description drama process using extracts from
-                vignettes - LINK TO VIGNETTE
-                ONE](#description-drama-process-using-extracts-from-vignettes---link-to-vignette-one)
+            -   [Description drama process using extracts from vignettes
+                and concepts of
+                MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
             -   [Relevant observations on side missions and drama from
