--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -8,6 +8,7 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
+
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
     -   [Research Questions - April
@@ -77,9 +78,6 @@ title: 4. Exploration of the Formative Learning Design Process
                 MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
-            -   [Relevant observations on side missions and drama from
-                the
-                data](#relevant-observations-on-side-missions-and-drama-from-the-data)
             -   [Observations on written interactions with the alien in
                 the
                 drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
@@ -1216,11 +1214,7 @@ _Extract from Appendix 4.x: Vignette of introduction of the drama process_
 
 The process of introducing a scenario for participant to respond to is common in project based learning in this vignette. Here it is extended using a dramatic element in line with Heathcote on Mantle of the Expert (MoE) and other process drama techniques (explored in Lit Review). The following section outlines key characteristics MoE [@aitken_dorothy_2013] in context.
 
-<!--
-REMOVED
-While inspired by the work on Heathcote on Mantle of the Expert, not all element of the process align directly. For example, the drama does not try to position the participants as expert game makers in a professional context. However, t -->
 
-<!-- Aitken's and Heathcote's terms follow in italics. Within a _fictional context_ a _responsible team_ is contracted into a _commission_ by a _client_. The facilitator _frames curriculum elements_ as productive tasks and plans for _tensions_ to arise involving: _authentic contexts_, _messiness of learning_, maintaining learner interest and _resilience_ to overcome the _grappling and struggling_ involved. The following sections explore some of these key concepts via the example in vignette. -->
 
 **_Contracting into drama_**
 
@@ -1236,17 +1230,23 @@ As a facilitator, I indicate that we are entering a dramatic process and attempt
 
 _Facilitator activities in role_
 
-My role is a link between the participant and the fictional commissioners of the games. The transcript in appendix 4.x details an example of extended facilitator input as instruction. As a practitioner in this setting, I had tried to limit teacher instruction and to outline boundaries to prevent learner disengagement. However some input was needed to help address the previously explored tension choice with over-ambition, and signpost participants to needed documentation. The drama narrative helped resolve some of this personal tension by allowing me using the dramatic commission as a foil to help avoid the encounter feeling personally controlling [heathcote_drama_1985].
+My role is a link between the participant and the fictional commissioners of the games. The transcript in appendix 4.1.a details an example of extended facilitator input as instruction. As a practitioner in this setting, I had tried to limit teacher instruction and to outline boundaries to prevent learner disengagement. However some input was needed to help address the previously explored tension choice with over-ambition, and signpost participants to needed documentation. The drama narrative helped resolve some of this personal tension by allowing me using the dramatic commission as a foil to help avoid the encounter feeling personally controlling [heathcote_drama_1985].
 CLARIFY - EXTERNALISING LIMITS TO ACTIVITY
 
 <!-- NOTE - support with lit? also is this one tension or two  -->
 
 _Learner activities in role_
 
-Beyond the wider fictional frame of the making activity, learners were also sometimes asked to undertake some activities in role, in particular reflection in role. This and other example are explored via the second vignette.
+Beyond the wider fictional frame of the making activity, learners were also sometimes asked to undertake some activities in role, in particular reflection in role. This and other example are explored via vignette 4.1.b.
+
+<!-- There is more evidence of the impact of the drama process in the vignette above. In the end of session reflection, Richie occupies a peripheral position and continues to interact with his laptop. However, he reacts positively when Ed's questions to the Weean are read out. He later adds to the discussion when it turns to the sabotage based missions set in the drama process. It is probably that the ability to represent his irreverent approach helped his participation in the more formal, collaborative reflection and feedback activity in a way that had not happened in previous sessions.
 
 
-There is more evidence of the impact of the drama process in the vignette above. In the end of session reflection, Richie occupies a peripheral position and continues to interact with his laptop. However, he reacts positively when Ed's questions to the Weean are read out. He later adds to the discussion when it turns to the sabotage based missions set in the drama process. It is probably that the ability to represent his irreverent approach helped his participation in the more formal, collaborative reflection and feedback activity in a way that had not happened in previous sessions.
+One key activity that was carried out in role in P3 was end of session reflection. -->
+
+<!-- IS MORE DESCRIPTION NEEDED HERE. ? -->
+
+Vignette 4.1.b  illustrates this  process. In the extract participants are invited to take turns showing their game, recapping their progress and outlining next steps to the alien observers. I play the role as a liaison facilitating the process for the fictional, remote audience. I also draw attention to the secret missions that had been distributed to participants, which along with social missions are explored in the following section.
 
 <!-- Choices
 - an overview of Mi's interactions on 2019-03-18 - home interests of art, community help, playtesting and being playtested, use of tools, Molly:as a social coder compared to others.
@@ -1264,13 +1264,6 @@ Here we are looking at something cultural?? -->
 <!-- The secret missions were part of this workshop
 https://playthinklearn.net/blog/ten-steps-to-game-design/ -->
 
-_Reflecting in Role_
-
-One key activity that was carried out in role in P3 was end of session reflection.
-
-<!-- IS MORE DESCRIPTION NEEDED HERE. ? -->
-
-Vignette 4.1.b is a transcript which illustrates this  process. In the extract participants are invited to take turns showing their game, recapping their progress and outlining next steps to the alien observers. I play the role as a liaison facilitating the process for the fictional, remote audience. I also draw attention to the secret missions that had been distributed to participants, which along with social missions are explored in the following section.
 
 
 #### Use of side missions to encourage varied creative practices
@@ -1279,13 +1272,11 @@ Vignette 4.1.b is a transcript which illustrates this  process. In the extract p
 Perhaps add back in as an unintended consequence?
 The live chat process started unintentionally as one child was left to their own devices as a parent was undertaking a social mission (see below and previous chapter). -->
 
-In addition to the the main mission of given in role to make a game to entertain and inform visiting aliens, and extra social and secret mission were delivered with the frame of a drama process, with an explicit aim to encourage community-focused patterns of behaviour which had emerged in previous iterations of game making.
-
-These include social aspect of playtesting and playful interactions, explored in later section in this chapter, which I had identified these behaviours as potentially helpful in maintaining the positive affect and identification with the on-going group process of game making.
+One of the activities that participants carried out within the frame of the drama process was the undertaking of side-missions. These missions encouraged community-focused patterns of behaviour which I had observed in previous iterations of game making and via the game on playing and making types described above. These were activities not directly related to game making process. They were designed to encourage the exploration of the games of others, to encourage a playful approach. I had identified these behaviours as potentially helpful in maintaining the positive affect and identification with the on-going group process of game making. An extract of the table of both social and secret missions follows (a full table is available as Appendix 4.x). These mission were printed out on cards and one of each type was given to the participants in the first half of the first two sessions.
 
 <!-- AN EXAMPLE HELPFUL? -->
 
-A table of both social and public missions follows. These mission were printed out on cards and one of each type was given to the participants in the first half of the first two sessions.
+
 
 <!-- NOTE - PERHAPS MOVE TO APPENDIX OR DESIGN CHAPTER -->
 <!-- NOTE ONLINE VERSION Secret missions and public missions -
@@ -1297,37 +1288,36 @@ https://drive.google.com/drive/folders/1I8D_axlOUAFIGarrnzGV5mSCe2MDCDso -->
 | Find out the names of 3 games that are being made.  | Change the variables at the start of someone else’s game to make it play in a funny way.    |
 | Make a list of characters in two other games being made.   | Change of the images in someone else’s project to a totally different image and see if they notice.    |
 | Find out the favourite computer games of 4 people.   | Change the level design of the first level of someone else’s project to make it impossible but try to change as little as possible to do that.   |
-| Find out who plays the most computer games per week in your group.   | Change of the images in someone else’s project to a very similar but slightly different version and see if they notice.    |
-| Find out what other people are planning. Give some friendly feedback to one other person / group. Why don’t you try…   | Add a rude sound to someone else’s project.    |
-| Ask 2 different groups if they have thought about what sounds they are going to put in their game.   | Swap over some sounds in someone else’s project and see if they notice.   |
-| Find out from three groups if they are going to try any totally new ideas.  | Delete all of the code of someone else as they are editing it and see how they react. Then help them get it back using the Rewind function.   |
+
 
 <br />
 
-In the transcript above of vignette 4.1.b we see that in the end-of-session reporting back participants engage in a lively discussion about the secret missions they had been given. Encouraged by her mother Molly, Nadine shares that she has been highly engaged in a disruptive secret mission. Dan and Toby express playful frustration. Mark and Ed contribute by sharing their more subtle disruption and Richie is keen to have his _rude noise_ mission noticed and commented on. Some public missions had a noticeable impact in this session particularly in  stimulating a discussion among parents around which arcade games they played as youths.
+<!-- In the transcript above of vignette 4.1.b we see that in the end-of-session reporting back participants engage in a lively discussion about the secret missions they had been given. Encouraged by her mother Molly, Nadine shares that she has been highly engaged in a disruptive secret mission. Dan and Toby express playful frustration. Mark and Ed contribute by sharing their more subtle disruption and Richie is keen to have his _rude noise_ mission noticed and commented on. Some public missions had a noticeable impact in this session particularly in  stimulating a discussion among parents around which arcade games they played as youths. -->
 
-These sanctioned non-design activities, designed to reduce participant stress, to encourage the exploration of the games of others are taken up enthusiastically by much of the community. In analysis of one key sessions involving missions from which the transcript was taken. Out of 10 participants, 8 visibly engaged with the secret missions during the session.
+
+These activities were undertaken by most of the participants. In analysis of one key sessions involving missions from which the transcript was taken. Out of 10 participants, 8 visibly engaged with the secret missions during the session.
 
 <!-- PROVISIONAL BRING accurate FIGURES TO THIS. -->
 
-The process was not without friction. After initially engaging with the process of secret games, Toby and Dave, who were later working on a tricky coding process, expressed frustration at interference. Thus, while promising, limits to this process should be evaluated to avoid overly disruptive behaviour which create barriers to progress. For example, time limits could be in place.  
+The process was not without friction.  While the some of the secret missions encouraged forms of disruptive play, griefing of playing against the game [@bakioglu_spectacular_2008; @bartle_hearts_nodate]. While this increases engagement for some learners, the process also suffered the danger that participants transgress levels of cheekiness and play which explores boundaries, to more disruptive ones. In this context this involved frustration and wasted time for other users. After initially engaging with the process of secret games, Toby and Dave, who were later working on a tricky coding process, expressed frustration at interference.
 
-Side missions or side quests are also used in open world games are used in part to appeal to different kinds of players and are often models on Bartle's taxonomy of game player types [@bartle_hearts_nodate]. In this phase, parents Molly and Mark both used the prompts of the social missions to take a break from their creative work using the software toolset to talk to other parents and children. This supported and encouraged behaviours that I had observed in the previous stage where they had been energised by breaks for coding and interactions with others. This activity helps addresses one of the key barriers to taking part in a coding community that of alienation from the culture of _hardcore coding_.
+Thus, while promising, limits to this process should be evaluated to avoid overly disruptive behaviour which create barriers to progress. For example, time limits could be in place.  
 
-    Mark: Right we’ve got a background in. Do you. Do you want to reply to the Weean.
+<!-- Side missions or side quests are also used in open world games are used in part to appeal to different kinds of players and are often models on Bartle's taxonomy of game player types [@bartle_hearts_nodate]. In this phase, parents Molly and Mark both used the prompts of the social missions to take a break from their creative work using the software toolset to talk to other parents and children.  -->
+
+
+
+    <!-- Mark: Right we’ve got a background in. Do you. Do you want to reply to the Weean.
     Ed: Yes. (Ed starts to type very slowly)
     Mark: (after some time) While you do that I’m going to go do my mission.
     Ed: What's your mission?
     Mark: To find out about other people's favourite games.
-    Ed: Alright.
+    Ed: Alright. -->
 
-While the some of the secret missions encouraged forms of disruptive play, griefing of playing against the game [@bakioglu_spectacular_2008; @bartle_hearts_nodate]. While this increases engagement for some learners, the process also suffered the danger that participants transgress levels of cheekiness and play which explores boundaries, to more disruptive ones. In this context this involved frustration and wasted time for other users. The vignette above shows a chance for the parent to express his frustration at the process in a playful way.
+This chapter makes limited claims in terms of the effectiveness of this process due to limits in terms of data gathering. However, it can make a claim that this activity has significant potential.
+HOW EXACTLY?
 
-The use of missions introduced by facilitator are taken up voluntarily by participants and work to address conflicts caused by identity clashes by recognising and encouraging diverse making approaches and styles of community participation.
-A BIT MORE ON AGENCY?
-
-
-_**Relevant observations on side missions and drama from the data**_
+In summary, this activity helped addresses one of the key barriers to taking part in a coding community that of alienation from the culture of coding. The use of missions introduced by facilitator are taken up voluntarily by participants and aimed to address conflicts caused by identity clashes by recognising and encouraging diverse making approaches and styles of community participation.
 
 The positive reaction of young people to the drama process was also picked up in interview data.
 
@@ -1362,12 +1352,15 @@ The positive reaction of young people to the drama process was also picked up in
 #### Observations on written interactions with the alien in the drama
 
 
+As previously explored, an emerging area of tensions that I noted in journal notes and in feedback from participants was the area of supporting documentation and resources. In addition to the careful technical and pedagogical creation and organisation of resources undertaken in P2, I sought a way for participants to be aware of and access relevant documentation without interrupting their creative flow or the fun of the experiences.  
 
-_Exploring documentation and accessing technical help within the drama frame_
+In P1 I created a mailing list for participants to ask technical and code questions of the wider group. My aim was to create a peer community helping each other rather than a helping relationship only between myself and individuals. However, this email list was hardly used for this purpose. Two parents shared that they were reluctant to bother other participants with their own issues. To address this in P3, as part of the drama process, I encouraged participants to write to the aliens to ask help. This is described and illustrated in appendix 4.x.
 
-In P1 I created a mailing list for participants to ask technical and code questions of the wider group. My aim was to create a peer community helping each other rather than a helping relationship only between myself and individuals. However, this email list was hardly used for this purpose. Two parents shared that they were reluctant to bother other participants with their own issues.
+As well as exploring documentation and accessing technical help within the drama frame, student also engaged in playful dialogue with the aliens unrelated to game making. The process of asking the aliens for technical help within a code project sparked a playful process of informal chatting with the aliens. This chat began to fulfil a function of building  insider rapport, creating a fun atmosphere, celebrating the completion of games in the absence of a public showcase, and signposting the achievements of other participants.
 
-To address this, as part of the drama process, I encouraged participants to write to the aliens to ask help. To do this in a way that encouraged other participants to join in, I created a project in the shared coding project area with a webpage that could be edited and viewed by participants. When in the vignette 4.1.b Mark asks "We’d like to ask the Weean some more questions (to overcome coding blockages), is that the best way to do it?", he is referring to this project webpage. The process of writing down a text request encourages the adoption of professional practice of asking a written question to overcome a coding problem and thus builds experience of using technical terms. Undertaking it in-role potentially addresses the barrier of asking for help by de-personalising the process.
+The process started with supportive and celebratory messages posted from the alien. The impact was significant with the young people with 5 out of 7 engaging by writing messages and all mentioning the interactions verbally during the session.
+<!--
+To do this in a way that encouraged other participants to join in, I created a project in the shared coding project area with a webpage that could be edited and viewed by participants. When in the vignette 4.1.b Mark asks "We’d like to ask the Weean some more questions (to overcome coding blockages), is that the best way to do it?", he is referring to this project webpage. The process of writing down a text request encourages the adoption of professional practice of asking a written question to overcome a coding problem and thus builds experience of using technical terms. Undertaking it in-role potentially addresses the barrier of asking for help by de-personalising the process.
 
 Dan and Toby also received written help from the aliens to implement a pattern of creating random movement in their pac-man clone game. For this pair, the process of following a code suggestion from the aliens gives the parent opportunity to deconstruct the code in detail to explore coding concepts. In later discussion, Dan uses the fiction of the alien when asking a clarifying question.
 
@@ -1375,11 +1368,15 @@ Dan and Toby also received written help from the aliens to implement a pattern o
 
 Here the text dialogue with the aliens is used as a mediating artefact first by the facilitator to share help in-role, and then by a parent to suggest a modification to the code syntax to create more readable code structure for novices.  
 
-While this aspect of the drama process was introduced by the facilitator, in alignment with the understanding of Sannino's concepts of transformative agency through double stimulation (TADS) participants transform the function of the alien conversation to their own purposes. This theme is developed in the next section.
-
+While this aspect of the drama process was introduced by the facilitator, in alignment with the understanding of Sannino's concepts of transformative agency through double stimulation (TADS) participants transform the function of the alien conversation to their own purposes. This theme is developed in the next section. -->
+<!--
 _Playful dialogue with the aliens unrelated to game making_
 
 The process of asking the aliens for technical help within a code project sparked a playful process of informal chatting with the aliens.
+
+This chat began to fulfil a function of building  insider rapport, creating a fun atmosphere, celebrating the completion of games in the absence of a public showcase, and signposting the achievements of other participants. For some pairs, while the child interacted in the live chat, parents performed final tweaks to code projects and challenges. Two parents in particular worked hard debugging more complex elements of the game with facilitators and peers. Other parents engaged with the chat and encouraged their children to get feedback from the aliens about their game in particular.
+
+The process started with supportive and celebratory messages posted from the alien. The impact was significant with the young people with 5 out of 7 engaging by writing messages and all mentioning the interactions verbally during the session. -->
 
 <!-- During in our end of session reflection above, I noted the following ad-hoc encounter that a child initiated on the interactive page while his father was taking a break from coding.
 
@@ -1395,10 +1392,7 @@ The process of asking the aliens for technical help within a code project sparke
 
 ![alien feedback]({{ site.baseurl }}/thesis_chapters/Pictures/2019-05-15-alien_feedback_2.png) -->
 
-Inspired by the positive reaction of participants to this playful engagement with the fictional audience, I asked a student helper to participate remotely to play the part of the alien. The student then gave feedback via live text interaction to participants in the final session. The process started with supportive and celebratory messages posted from the alien. The impact was significant with the young people with 5 out of 7 engaging by writing messages and all mentioning the interactions verbally during the session.
-
-The live chat began to fulfil a function of building  insider rapport, creating a fun atmosphere, celebrating the completion of games in the absence of a public showcase, and signposting the achievements of other participants. For some pairs, while the child interacted in the live chat, parents performed final tweaks to code projects and challenges. Two parents in particular worked hard debugging more complex elements of the game with facilitators and peers. Other parents engaged with the chat and encouraged their children to get feedback from the aliens about their game in particular.
-
+<!-- Inspired by the positive reaction of participants to this playful engagement with the fictional audience, I asked a student helper to participate remotely to play the part of the alien. The student then gave feedback via live text interaction to participants in the final session. The process started with supportive and celebratory messages posted from the alien. The impact was significant with the young people with 5 out of 7 engaging by writing messages and all mentioning the interactions verbally during the session. -->
 
 
 <!--
@@ -1412,6 +1406,10 @@ To express this using affordance theory, the affordance offered by the medium of
   -->
 
 #### Concluding remarks on process drama
+
+
+While inspired by the work on Heathcote on Mantle of the Expert, not all element of the process align directly. For example, the drama does not try to position the participants as expert game makers in a professional context.
+
 
 This section has explored the use of the possibilities of a drama process to support both the leaner expression of agency and as a pedagogical process for facilitators to militate probable conflicts and obstacles for learners in the creative process. The mission-based interventions began as naturally occurring expression of learner agency which became incorporated into the drama process.
 
