--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -120,35 +120,39 @@ Moved impact of software tools here - and overall on templated approach on a mic
 
 <!-- - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review) -->
 
-Due to the novel nature of the learning design, a detailed outline of the specifics of the participants experience of the design helps readers situate  the findings of the following two chapters.
-<!-- NOTE  - CHAPTERS ON WHAT? -->
-
-This chapter contains a high level of detail on the technical elements of the learning design to both both helps situate the findings of the next chapter and to allow the design by other practitioners and researchers in this area. The motivation here is that the processes of this research should be understandable and replicable by other practitioners and researchers.
-
 <!-- I am guided in this respect by the lineage of research of constructionism, and in particular the sharing of practice between researchers and teachers regarding the use of LOGO. A seminal example of this practice is Papert and Solomon's publication Twenty things to do with a computer which is replete with code examples and diagrams of their output on the screen [-@papert_twenty_1971]. Many such examples exist from Papert in published memos and grass-roots collaborations with teachers [^4]. -->
 
----
+<!-- ---
 NOTE
 ---
 
 I originally structured the chapter around observations structured in the phases described in chapter three. This approach proved over-complicated, mixing the description of tensions which often spanned multiple phases.
 
----
-
-In line with key techniques of third generation activity theory (3GAT), this chapter addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design.
-
-Firstly, I describe activity systems at different scopes, focusing on the objective of participants.
-
-Following this, I explore emerging tensions in design in a way which communicates relevant context through the analysis of three areas of emerging contradictions in activity. Here the term contradictions is used as a wrapper for more specific tensions, barriers, breakdowns, conflicts that indicate an "unfit with (system) elements [@kuutti_activity_1995]. Three main areas of contradictions are explored in this chapter.
-
-- Addressing contradictions arising in use of coding tool use and game asset creation - often experienced as more individual level
-- Contradictions associated with project navigation and the use of supporting documentation - interpreted here through the lens of guided participation
-- Responding to tensions and barriers in cultural aspects of the game making activity
+--- -->
 
 
-Within the last area, I examine the impact of a process drama with an aim to establish and nurture community practice, exploring the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame. The drama process is an example of an introduced cultural tool. The process acts as wrapper to several supporting techniques. the side missions to and to sanction different approaches, the imagined audience encourages reflection and semi-authentic approaches. It is the most advanced tools of a range that was put into place to create a space suitable for creativity, collaboration and self expression.
+<!-- Due to the novel nature of the learning design, a detailed outline of the specifics of the participants experience of the design helps readers situate  the findings of the following two chapters. -->
 
+In line with key techniques of third generation activity theory (3GAT), this chapter addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design. This chapter contains a high level of detail on the technical elements of the learning design to both both helps situate the findings of the next chapter and to allow the design to be by other practitioners and researchers in this area.
+
+
+Firstly, I describe activity systems at different scopes, focusing on the objective of participants and drawing on a vignette illustrating indicative participant activity.
+
+Following this, I explore emerging tensions in design in a way which communicates relevant context through the analysis of three areas of emerging contradictions in activity. Here the term contradictions is used as a wrapper for more specific tensions, barriers, breakdowns, conflicts that indicate an "unfit with (system) elements [@kuutti_activity_1995].
+
+Three main areas of contradictions are explored in this chapter are as follows.
+
+*Contradictions arising in use of coding tool use and game asset creation* - often experienced as more individual level
+
+*Contradictions associated with project navigation and the use of supporting documentation:* interpreted here through the lens of guided participation
+
+*Responding to contradictions  in cultural aspects of the game making activity:* In this section, I examine the impact of a process drama with an aim to establish and nurture community practice, exploring the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame.
 This chapter ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
+
+
+MOVE TO DISCUSSION IF THERE IS A SUITABLE SPACE
+The drama process is an example of an introduced cultural tool. The process acts as wrapper to several supporting techniques. the side missions to and to sanction different approaches, the imagined audience encourages reflection and semi-authentic approaches. It is the most advanced tools of a range that was put into place to create a space suitable for creativity, collaboration and self expression.
+
 
 <!-- - Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions. -->
 
@@ -223,7 +227,7 @@ There is a tension where he is hesitant about where to place code.
 Screen shot of the menu of choices. -->
 
 
-## Detailed description of dimensions of game making activity
+## Analysis of dimensions of game making activity using 3GAT framework
 
 <!--
 #### Code Playgrounds
@@ -234,15 +238,7 @@ However in its styling it is playful and editorial picks and write up celebrate 
 
 
 
-The purpose of this vignette is to illustrate some of the key features of the overall game making activity in context. The following vignette, consisting of extracts of participant activity over twenty minutes of a session in P2 (see below), shows activity happening at different scopes of activity. The participant, a child Toby, has been working independently on the design of a platform game for the first fifteen minutes of the session. Some specialist terms are used in the vignette which are explained in more detail in this chapter and in the glossary.
-
 <!-- The tool shown in screenshots is the code playground glitch (see chapter 2 and glossary). -->
-
-#### Illustrative vignette one participants activity indicating general activity of participants
-
-The vignette is included as a principle appendix.
-
-https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit
 
 ### Description of interacting systems of activity illustrated using the vignette
 
@@ -310,10 +306,22 @@ There are diverse end audiences for the games. The final target audience are stu
 
 ![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater3.jpg){width=75%}
 
-While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which bleed into the tensions which emerge at this level. In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. In the vignette above, I draw the participants attention to the showcasing of their games to an external audience. Toby begins the session playing his own game. During the course of this session he invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed.
+While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which bleed into the tensions which emerge at this level.
 
 
-While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. This chapter explores those tensions.
+
+*Illustrative vignette one participants activity indicating general activity of participants*
+
+In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. In the vignette above, I draw the participants attention to the showcasing of their games to an external audience. Toby begins the session playing his own game. During the course of this session he invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed.
+
+EDIT WITH ABOVE
+The purpose of this vignette is to illustrate some of the key features of the overall game making activity in context. The following vignette, consisting of extracts of participant activity over twenty minutes of a session in P2 (see below), shows activity happening at different scopes of activity. The participant, a child Toby, has been working independently on the design of a platform game for the first fifteen minutes of the session. Some specialist terms are used in the vignette which are explained in more detail in this chapter and in the glossary.
+
+The vignette is included as an appendix of this chapter as Appendix 4.a -
+[Link to online version here](https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit)
+
+
+IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. This chapter explores those tensions.
 
 
 <!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
