pink notes on going

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -300,7 +300,9 @@ The broader activity system whose object was the game making programme had a sha
 
 <!-- Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0 -->
 
-![Illustration 4.x - Larger game making activity system  ](./Pictures/At_dia_2_v1.png){width=95%}
+
+![Illustration 4.x - Larger game making activity system  ](./Pictures/At_dia_1_v1.png){width=95%}
+
 
 There are diverse end audiences for the games. The final target audience are students and staff in the Manchester Met Brooks building where the created games are shared in arcade cabinets at the end of the programme. An additional audience are friends and family who can be send the games to play online. The more immediate audience for the evolving games are peer game makers during the making sessions.
 
@@ -321,7 +323,7 @@ The vignette is included as an appendix of this chapter as Appendix 4.a -
 [Link to online version here](https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit)
 
 
-IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. This chapter explores those tensions.
+IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. The third contradiction explored in this chapter explores those tensions (including? ....).
 
 
 <!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
@@ -331,12 +333,17 @@ NOTE - More on large scope in AT terms? What is needed here? -->
 
 #### Constructing a game feature by feature
 
-Within the activity system of making a game
+Within the activity system of making a game, in analsis of video data and evolution of course resources from P2 onwards, I identified activity happening at an individual or pair work which emerged with disctinctive characteristics.
 
-There is a strong case to make for the sub-projects of implementing GDP as a key unit of analysis. Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
+Activity was driven by learners setting goals, requesting help and then implement code structures based around altering or adding new features to the game using tools available in the learning environment. Participants also worked on audio and graphical assets to achieve this  objective.
+
+While is it possible, aligning with Levontev, to identify the implemenation of features as actions withing the wider activity, there is value in  treating of implementing each GDP as a sub-project or activity systems in its own right ( NOTE - or at least as as a key unit of analysis). Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
+QUOTE?
 
 
-At this scope of activity, participants work on the game code and and audio and graphical assets to achieve the broad objective is to alter and add new features to the game using tools available in the learning environment.  
+
+
+
 
 <!-- | Subject         | Objective             | Tools & Processes          |
 |------|-------------|------------|
@@ -349,7 +356,7 @@ At this scope of activity, participants work on the game code and and audio and 
 
 Table 4.x.  Tools used in mid-level objectives when selecting and planning implementation of game elements. -->
 
-![Mid-level activity system of game making](./Pictures/At_dia_1_v1.png){width=95%}
+![Mid-level activity system of game making](./Pictures/At_dia_2_v1.png){width=95%}
 
 <!-- One observation from he experimental course was that without significant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
@@ -364,11 +371,24 @@ By this stage, the process of collecting a user generated list of features and t
 
 <!-- Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. -->
 
-In addition game design patterns emerged as a shared object. DEVELOP THIS IDEA HERE OR IN DISCUSSION.
+
+Later in this chapter we examine in more detail the emergence of  game design patterns as shared concepts and the implications for activity in more depth. At this stage is it sufficient to stage that game design patterns emerged as a shared object as descbed by Engestrom in x.
+
+INSERT ENG'S DIAGRAM HERE FOR NOW - AND CALL BACK TO PREVIOUS CHAPTER.
+
+DEVELOP THIS IDEA HERE OR MOVE IT TO DISCUSSION WITH SOME KIND OF SIGNPOSTING HERE.
 
 ![Illustration 4.x - Shared object of implementing GDP  ](./Pictures/At_dia_4_v1.png){width=95%}
 
-Overall activity at this level was driven by learners setting goals and requesting help to implement game features. By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette above I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress. A later section of this chapter details the different supporting documentation guiding participation in game making practices. Chapter five then explores activity occurring at this scope in more detail with a greater focus on emerging concepts as tools.
+This diagram above helps illustrates that the object of activity here is not only the code and game assets which participants are working on. In addition the emerging concept and group understanding of the game design pattern becomes a share understanding on a community level as playtesing, pair work and peer help happens.
+
+Objectives at this level also vary between participants with some more straight-forward and others more tricky based on their making style. For example, beyond a purely utilitarian objective, a further objective in implementing a GDP, e.g. a new graphical element may be to increase a sense of personal identificaiton with the game as an vehicle for personal expression.  MOVE OR EXPLAIN
+
+ALTER THE DIAGRAMS ABOVE TO REFLECT THIS.
+
+An illustrative example of the use of the diverse tool set merits a summary before further discussion in this chapter.  By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette 4.a I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
+
+A later section of this chapter details the different supporting documentation guiding participation in game making practices. Chapter five then explores activity occurring at this scope in more detail with a greater focus on emerging concepts as tools.
 
 
 <!-- While some game patterns were simple to add, e.g. altering the location of platforms, other more complicated features involved several stages and varied tools to implement. The next section describes these stages as discrete code and design structures. -->
@@ -552,7 +572,7 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 
 
-## Tensions due to lack of access and familiarity to game programming tools
+## Contradictions involving the use of game programming and asset authoring tools
 
 **Addressing contradictions arising in use of coding tool use and game asset creation - often experienced as more individual level**
 
